Modernize - Ran many openrewrite recipes